kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: ktb-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ktb11chatbot/ktb-11-project-1-chatbot-be:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: "1Gi"  # 최소 500Mi 보장
            limits:
              ephemeral-storage: "2Gi"  # 최대 2GiB 사용 가능
