kubernetes/nlp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-deployment
  namespace: ktb-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlp
  template:
    metadata:
      labels:
        app: nlp
    spec:
      containers:
        - name: nlp
          image: ktb11chatbot/ktb-11-project-1-chatbot-nlp:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              ephemeral-storage: "3Gi"
            limits:
              ephemeral-storage: "5Gi"
