kubernetes/nlp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nlp-service
  namespace: ktb-chatbot
spec:
  selector:
    app: nlp
  ports:
    - port: 80
      targetPort: 5001
